--- a/www/templates/main-tabs.html
+++ b/www/templates/main-tabs.html
@@ -7,7 +7,7 @@
         <ion-nav-view name="infoView"></ion-nav-view>
     </ion-tab>
     
-    <ion-tab title="消息" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/main/messages">
+    <ion-tab title="消息" icon-off="ion-android-textsms" icon-on="ion-android-textsms" href="#/main/messages">
         <ion-nav-view name="messageView"></ion-nav-view>
     </ion-tab>
     
