--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,6 +15,7 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
+@import "www/lib/font-awesome/scss/font-awesome";
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
