--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,36 @@
 /* Empty. Add your own CSS if you like */
 
+@font-face {
+    font-family: 'fontawesome';
+    src:url('../lib/font-awesome/fonts/fontawesome-webfont.eot');
+    src:url('../lib/font-awesome/fonts/fontawesome-webfont.eot') format('embedded-opentype'),
+    url('../lib/font-awesome/fonts/fontawesome-webfont.woff') format('woff'),
+    url('../lib/font-awesome/fonts/fontawesome-webfont.ttf') format('truetype'),
+    url('../lib/font-awesome/fonts/fontawesome-webfont.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.icon-file-powerpoint-o:before {
+    font-family:'fontawesome';
+    content:'\f1c4'
+}
+
+.icon-qrcode:before {
+    font-family:'fontawesome';
+    content:'\f029'
+}
+
+.icon-plug:before {
+    font-family:'fontawesome';
+    content:'\f1e6'
+}
+
+.icon-arrow-circle-right:before {
+    font-family:'fontawesome';
+    content:'\f0a9'
+}
+
 .force-no-padding {
     padding:0px !important;
 }
@@ -37,6 +68,10 @@
     padding-right:20px !important;
 }
 
+.force-width70 {
+    width:70px !important;
+}
+
 .force-width60 {
     width:60px !important;
 }
@@ -61,5 +96,154 @@
 
 .col-fixed-40 {
     width:40px !important;  
+}
+
+img.profile-pic {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 10px;
+}
+
+img.profile-pic.left {
+    left: 10px;
+}
+
+img.profile-pic.right {
+    right: 10px;
+}
+
+.message-detail {
+    white-space: nowrap;
+    font-size: 14px;
+}
+
+/*---------------------*/
+
+.message {
+    font-size: 14px;
+}
+
+.message-wrapper {
+    position: relative;
+}
+
+.message-wrapper:last-child {
+    margin-bottom: 10px;
+}
+
+.chat-bubble {
+    border-radius: 5px;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    margin: 10px;
+    max-width: 80%;
+}
+
+.chat-bubble:before {
+    content: "\00a0";
+    display: block;
+    height: 16px;
+    width: 9px;
+    position: absolute;
+    bottom: -7.5px;
+}
+
+.chat-bubble.left {
+    background-color: #e6e5eb;
+    float: left;
+    margin-left: 55px;
+}
+
+.chat-bubble.left:before {
+    background-color: #e6e5eb;
+    left: 10px;
+    -webkit-transform: rotate(70deg) skew(5deg);
+}
+
+.chat-bubble.right {
+    background-color: #158ffe;
+    color: #fff;
+    float: right;
+    margin-right: 55px;
+}
+
+.chat-bubble.right:before {
+    background-color: #158ffe;
+    right: 10px;
+    -webkit-transform: rotate(118deg) skew(-5deg);
+}
+
+.chat-bubble.right a.autolinker {
+    color: #fff;
+    font-weight: bold;
+}
+
+.user-messages-top-icon {
+    font-size: 28px;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    top: -3px;
+    right: 5px;
+}
+
+.msg-header-username {
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    top: -3px;
+}
+
+
+.bold {
+    font-weight: bold;
+}
+
+.cf {
+    clear: both !important;
+}
+
+a.autolinker {
+    color: #3b88c3;
+    text-decoration: none;
+}
+
+.loader-center {
+    height: 100%;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-content: stretch;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.loader .ion-loading-c {
+    font-size: 64px;
 }
 
