--- a/www/templates/clists.html
+++ b/www/templates/clists.html
@@ -1,12 +1,25 @@
 <ion-view view-title="课程列表">
 <ion-content>
-<ion-list>
-    <a class="item" href="#">
-        <h2>高等数学A</h2>
-        <p>教师: 太上老君</p>
-    </a>
-<ion-item>
-</ion-item>
-</ion-list>
+<a class="item" ng-repeat="a in courseSessions" href="#/main/courseSession/content/{{a.sid}}">
+    <div class="row force-no-padding">
+        <div class="col avatar-frame-small force-no-padding">
+            <div class="row force-no-padding">
+                <!--
+                <div class="alfa-title small">
+                    <div class="{{a.tag}}"></div>
+                </div>          
+                -->
+                <div class="col force-no-padding-left15">
+                    <div class="row force-no-padding">
+                        <h2 class="ng-binding">{{a.name}}</h2>
+                    </div>
+                    <div class="row force-no-padding-top5">
+                        <p class="ng-binding">{{a.lecturer}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</a>
 </ion-content>
 </ion-view>
