--- a/www/templates/messages.html
+++ b/www/templates/messages.html
@@ -32,7 +32,7 @@
         </div>
     </a>
 </ion-list>
-<ion-infinite-scroll distance="10%" on-infinite="loadOld()">
+<ion-infinite-scroll immediate-check="false" distance="10%" on-infinite="loadOld()">
 </ion-infinite-scroll>
 </ion-content>
 </ion-view>
