--- a/www/css/style.css
+++ b/www/css/style.css
@@ -247,3 +247,36 @@ a.autolinker {
     font-size: 64px;
 }
 
+.image-list-thumb {
+    padding: 2px 2px 2px 2px;
+    height: 150px;
+}
+ 
+.image-modal {
+    width: 100% !important;
+    height: 100%;
+    top: 0 !important;
+    left: 0 !important;
+}
+ 
+.transparent {
+  background: rgba(0,0,0,0.7);
+}
+ 
+.slider {
+    width: 100%;
+    height: 100%;
+}
+.scroll {
+    width:100%;
+    height:100%;
+} 
+
+.slideimage {
+    width: 100%;
+    /*height: 600px; */
+    height: 100%;  
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center, center;
+}
