--- a/www/templates/course.html
+++ b/www/templates/course.html
@@ -21,7 +21,7 @@
 <ion-content class="has-header">
 <div class="list">
     <div class="item item-icon-left" ng-click="scanobj.scan()" menu-close><i class="icon ion-qr-scanner"></i>扫描</div>
-    <div class="item item-icon-left" ng-if="identity.iamlecturer==1"  ng-click="" menu-close><i class="icon icon-qrcode"></i>生成考勤码</div>
+    <div class="item item-icon-left" ng-if="identity.iamlecturer==1"  ng-click="toggleAttend()" menu-close><i class="icon icon-qrcode"></i>考勤开关</div>
     <div class="item item-icon-left" ng-if="identity.iamlecturer==1" ng-click="uploadToServer('pc')" menu-close><i class="icon ion-ios-upload-outline"></i>上传到PC</div>
     <div class="item item-icon-left" ng-if="identity.iamlecturer==1" ng-click="uploadToServer('server')" menu-close><i class="icon ion-ios-upload"></i>上传课件到SERVER</div>
     <div class="item item-icon-left" ng-click="chat()" menu-close><i class="icon ion-chatbubbles"></i>聊天室</div>
