--- a/www/templates/chat.html
+++ b/www/templates/chat.html
@@ -2,8 +2,6 @@
 <ion-content>
 <div class="message-wrapper" ng-repeat="msg in messages">
     <div ng-if="$root.user.uid != msg.uid">
-        <img ng-if="msg.headimg == null" class="profile-pic left" ng-src="img/default.jpg"/>
-        <img ng-if="msg.headimg != null" class="profile-pic left" ng-src="{{msg.headimg}}"/>
         <div class="chat-bubble left">
             <div class="message">{{msg.text}}</div>
             <div class="message-detail">
@@ -11,19 +9,29 @@
                 <span am-time-ago="msg.time"></span>
             </div>
         </div>
+        <img ng-if="msg.headimg == null || msg.headimg==''" class="profile-pic left" ng-src="img/default.png"/>
+        <img ng-if="msg.headimg != null" class="profile-pic left" ng-src="{{msg.headimg}}"/>
     </div>
 
     <div ng-if="$root.user.uid == msg.uid">
-        <img ng-if="msg.headimg == null" class="profile-pic right" ng-src="img/default.jpg"/>
-        <img ng-if="msg.headimg != null" class="profile-pic right" ng-src="{{msg.headimg}}"/>
         <div class="chat-bubble right">
             <div class="message">{{msg.text}}</div>
             <div class="message-detail">
                 <span class="bold">——  {{msg.realname}}</span>
-                <span am-time-ago="msg.time"></span>
+                <!-- <span am-time-ago="msg.time"></span> -->
             </div>
         </div>
+        <img ng-if="msg.headimg == null || msg.headimg==''" class="profile-pic right" ng-src="img/default.png"/>
+        <img ng-if="msg.headimg != null" class="profile-pic right" ng-src="{{msg.headimg}}"/>
     </div>
 </div>
+<ion-footer-bar class="bar-stable item-input-inset message-footer bar bar-footer">
+<label class="item-input-wrapper">
+<textarea row='1' ng-model="input.message" minlength='1' maxlength='500' placeholder='消息正文' style="overflow: hidden; word-wrap: break-word; resize: none; height: 20px; width:100%;"></textarea>
+</label>
+<div class="footer-btn-wrapper" style="width:40px;">
+<button class="button button-icon icon ion-android-send footer-btn" ng-disabled="!input.message || input.message.trim() == ''" ng-click="chat()"></button>
+</div>
+</ion-footer-bar>
 </ion-content>
 </ion-view>
