--- a/www/templates/course-content.html
+++ b/www/templates/course-content.html
@@ -26,7 +26,7 @@
     PPT开关
 </div>
 
-<div ng-if="identity.iamlecturer==1" class="item item-icon-left">
+<div ng-if="identity.iamlecturer==1" class="item item-icon-left" ng-click="togglepic()">
     <i class="icon ion-image"></i>
     图片开关
 </div>
