--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -5072,7 +5072,7 @@ html {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  font-family: sans-serif;
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif, "Microsoft YaHei", "Hiragino Sans GB", "STHeiti Light", "SimHei" !important;
   /* 1 */
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -5357,7 +5357,7 @@ body,
   color: #000;
   word-wrap: break-word;
   font-size: 14px;
-  font-family: "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif, "Microsoft YaHei", "Hiragino Sans GB", "STHeiti Light", "SimHei";
   line-height: 20px;
   text-rendering: optimizeLegibility;
   -webkit-backface-visibility: hidden;
@@ -5595,7 +5595,7 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   color: #000;
   font-weight: 500;
-  font-family: "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif, "Microsoft YaHei", "Hiragino Sans GB", "STHeiti Light", "SimHei";
   line-height: 1.2; }
   h1 small, h2 small, h3 small, h4 small, h5 small, h6 small,
   .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small {
@@ -5932,9 +5932,8 @@ a.subdued {
     .bar.bar-stable.bar-footer {
       background-image: linear-gradient(180deg, #b2b2b2, #b2b2b2 50%, transparent 50%); }
   .bar.bar-positive {
-    border-color: #0c60ee;
-    background-color: #387ef5;
-    background-image: linear-gradient(0deg, #0c60ee, #0c60ee 50%, transparent 50%);
+    border-color: #1b6fb7;
+    background-color: #1b6fb7;;
     color: #fff; }
     .bar.bar-positive .title {
       color: #fff; }
@@ -6353,25 +6352,18 @@ a.subdued {
   justify-content: center;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
-  border-color: #b2b2b2;
-  background-color: #f8f8f8;
-  background-image: linear-gradient(0deg, #b2b2b2, #b2b2b2 50%, transparent 50%);
-  color: #444;
+  background-color: #81e5e5;
+  color: #fff;
   position: absolute;
   bottom: 0;
   z-index: 5;
   width: 100%;
-  height: 49px;
-  border-style: solid;
-  border-top-width: 1px;
-  background-size: 0;
-  line-height: 49px; }
+  background-size: 0; }
   .tabs .tab-item .badge {
     background-color: #444;
     color: #f8f8f8; }
   @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
     .tabs {
-      padding-top: 2px;
       border-top: none !important;
       border-bottom: none;
       background-position: top;
@@ -6982,9 +6974,12 @@ ion-tabs.tabs-color-active-stable .tab-item {
     color: #f8f8f8; }
 
 ion-tabs.tabs-color-active-positive .tab-item {
-  color: #444; }
+  color: #fff;
+  padding: 3px 0; }
   ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, ion-tabs.tabs-color-active-positive .tab-item.active, ion-tabs.tabs-color-active-positive .tab-item.activated {
-    color: #387ef5; }
+    background: #1b6fb7;
+    color: #fff;
+    padding: 3px 0; }
 
 ion-tabs.tabs-color-active-calm .tab-item {
   color: #444; }
@@ -7081,8 +7076,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   white-space: nowrap;
   font-weight: 400;
   font-size: 14px;
-  font-family: "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
-  opacity: 0.7; }
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif, "Microsoft YaHei", "Hiragino Sans GB", "STHeiti Light", "SimHei"; }
   .tab-item:hover {
     cursor: pointer; }
   .tab-item.tab-hidden {
@@ -7101,9 +7095,8 @@ ion-tabs.tabs-color-active-dark .tab-item {
 
 .tab-item .icon {
   display: block;
-  margin: 0 auto;
-  height: 32px;
-  font-size: 32px; }
+  font-size: 26px;
+  margin-bottom: 2px; }
 
 .tabs-icon-left.tabs .tab-item,
 .tabs-icon-left > .tabs .tab-item,
@@ -7652,7 +7645,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
  * --------------------------------------------------
  */
 .item {
-  border-color: #ddd;
+  border-color: #6fa0a1;
   background-color: #fff;
   color: #444;
   position: relative;
@@ -8485,10 +8478,10 @@ button.item.item-button-right {
  */
 .card,
 .list-inset {
-  overflow: hidden;
+  /*overflow: hidden;
   margin: 20px 10px;
   border-radius: 2px;
-  background-color: #fff; }
+  background-color: #fff; */}
 
 .card {
   padding-top: 1px;
@@ -8509,8 +8502,7 @@ button.item.item-button-right {
 .card .item:first-child,
 .list-inset .item:first-child,
 .padding > .list .item:first-child {
-  border-top-left-radius: 2px;
-  border-top-right-radius: 2px; }
+  border-radius: 2px;}
   .card .item:first-child .item-content,
   .list-inset .item:first-child .item-content,
   .padding > .list .item:first-child .item-content {
@@ -8886,11 +8878,6 @@ textarea {
   font-size: 14px;
   line-height: 1.42857; }
 
-input,
-button,
-select,
-textarea {
-  font-family: "Helvetica Neue", "Roboto", "Segoe UI", sans-serif; }
 
 .item-input {
   display: -webkit-box;
@@ -8906,7 +8893,7 @@ textarea {
   align-items: center;
   position: relative;
   overflow: hidden;
-  padding: 6px 0 5px 16px; }
+  padding: 5px 10px; }
   .item-input input {
     -webkit-border-radius: 0;
     border-radius: 0;
@@ -9070,13 +9057,8 @@ input[type="search"],
 input[type="tel"],
 input[type="color"] {
   display: block;
-  padding-top: 2px;
-  padding-left: 0;
-  height: 34px;
-  color: #111;
-  vertical-align: middle;
-  font-size: 14px;
-  line-height: 16px; }
+  color: #656565;
+  vertical-align: middle; }
 
 .platform-ios input[type="datetime-local"],
 .platform-ios input[type="date"],
@@ -9903,15 +9885,16 @@ progress {
   margin: 0;
   padding: 0 12px;
   min-width: 52px;
-  min-height: 47px;
+  /*min-height: 47px;
   border-width: 1px;
-  border-style: solid;
+  border-style: solid;*/
   border-radius: 2px;
   vertical-align: top;
   text-align: center;
   text-overflow: ellipsis;
   font-size: 16px;
-  line-height: 42px;
+  /*line-height: 42px;*/
+  padding: 10px 0;
   cursor: pointer; }
   .button:hover {
     color: #444;
