tag for courses

--- a/www/templates/clists.html
+++ b/www/templates/clists.html
@@ -4,11 +4,9 @@
     <div class="row force-no-padding">
         <div class="col avatar-frame-small force-no-padding">
             <div class="row force-no-padding">
-                <!--
-                <div class="alfa-title small">
-                    <div class="{{a.tag}}"></div>
+                <div>
+                    <span>{{a.tag}}</span>
                 </div>          
-                -->
                 <div class="col force-no-padding-left15">
                     <div class="row force-no-padding">
                         <h2 class="ng-binding">{{a.name}}</h2>
