--- a/www/templates/clists.html
+++ b/www/templates/clists.html
@@ -5,7 +5,7 @@
         <div class="col avatar-frame-small force-no-padding">
             <div class="row force-no-padding">
                 <div>
-                    <span>{{a.tag}}</span>
+                   {{a.tag}}
                 </div>          
                 <div class="col force-no-padding-left15">
                     <div class="row force-no-padding">
