js choose tag's color

--- a/www/templates/clists.html
+++ b/www/templates/clists.html
@@ -4,7 +4,7 @@
     <div class="row force-no-padding">
         <div class="col avatar-frame-small force-no-padding">
             <div class="row force-no-padding">
-                <div>
+                <div class="{{a.tagcls}}">
                    {{a.tag}}
                 </div>          
                 <div class="col force-no-padding-left15">
