--- a/www/templates/main-tabs.html
+++ b/www/templates/main-tabs.html
@@ -1,13 +1,13 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive {{$root.hideTabs}}">
-    <ion-tab title="上课" icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/main/clists">
+    <ion-tab title="上课" icon-off="ion-ios-book-outline" icon-on="ion-ios-book" href="#/main/clists">
         <ion-nav-view name="clistsView"> </ion-nav-view>
     </ion-tab>
     
-    <ion-tab title="资讯" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/main/info">
+    <ion-tab title="资讯" icon-off="ion-ios-paperplane-outline" icon-on="ion-ios-paperplane" href="#/main/info">
         <ion-nav-view name="infoView"></ion-nav-view>
     </ion-tab>
     
-    <ion-tab title="消息" icon-off="ion-android-textsms" icon-on="ion-android-textsms" href="#/main/messages">
+    <ion-tab title="消息" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" href="#/main/messages">
         <ion-nav-view name="messageView"></ion-nav-view>
     </ion-tab>
     
