--- a/www/templates/clists.html
+++ b/www/templates/clists.html
@@ -1,6 +1,6 @@
 <ion-view view-title="课程列表">
 <ion-content>
-<a class="item" ng-repeat="a in courseSessions" href="#/main/courseSession/content/{{a.sid}}">
+<a class="item color-line" ng-repeat="a in courseSessions" href="#/main/courseSession/content/{{a.sid}}">
     <div class="row force-no-padding">
         <div class="col avatar-frame-small force-no-padding">
             <div class="row force-no-padding">
