--- a/www/templates/messages.html
+++ b/www/templates/messages.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 <ion-list>
-<a class="item" ng-repeat="item in messages.list" href="#/main/messages/{{item.id}}">
+<a class="item color-line" ng-repeat="item in messages.list" href="#/main/messages/{{item.id}}">
         <div class="row force-no-padding">
             <div class="col avatar-frame-small force-no-padding">
                 <div class="row force-no-padding">
