--- a/www/templates/msg-write.html
+++ b/www/templates/msg-write.html
@@ -13,7 +13,7 @@
     <label class="item item-input">
         <textarea rows="20" ng-model="compose.content" placeholder="正文"></textarea>
     </label>
-        <button class="button button-block button-positive" ng-click="send()">发送</button>
+        <button class="button button-block btn-green" ng-click="send()">发送</button>
 </div>
 
 </ion-content>
