--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -5382,7 +5382,9 @@ body.grade-c {
   padding-top: 1px;
   margin-bottom: -1px;
   width: auto;
-  height: auto; }
+  height: auto; 
+  background: url(../img/bg.png) no-repeat bottom center;
+  background-size: auto 100%;}
 
 .menu .scroll-content.scroll-content-false {
   z-index: 11; }
@@ -7645,16 +7647,13 @@ ion-tabs.tabs-color-active-dark .tab-item {
  * --------------------------------------------------
  */
 .item {
-  border-color: #81e5e5;
+  
   background-color: #fff;
   color: #444;
   position: relative;
   z-index: 2;
   display: block;
-  margin: -1px;
   padding: 16px;
-  border-width: 1px;
-  border-style: dashed;
   font-size: 16px; }
   .item h2 {
     margin: 0 0 2px 0;
@@ -7998,7 +7997,7 @@ a.item-content {
   position: absolute;
   top: 0;
   height: 100%;
-  font-size: 32px; }
+  font-size: 22px; }
   .item-icon-left .icon:before,
   .item-icon-right .icon:before {
     display: block;
@@ -8236,12 +8235,12 @@ button.item.item-button-right {
     margin-bottom: 16px; }
 
 .item-divider {
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding:12px 0;
   min-height: 30px;
   background-color: #f5f5f5;
   color: #222;
-  font-weight: 500; }
+  font-weight: 500;
+  text-align: center; }
 
 .platform-ios .item-divider-platform,
 .item-divider-ios {
@@ -8486,7 +8485,7 @@ button.item.item-button-right {
 .card {
   padding-top: 1px;
   padding-bottom: 1px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3); }
+  /*box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3); */}
   .card .item {
     border-left: 0;
     border-right: 0; }
