--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -1,11 +1,11 @@
 <div class="modal">
     <div class="bar bar-header bar-positive">
         <div class="button button-clear" ng-click="exitContacts()">
-            <span class="icon ion-close"></span>
+            <span class="icon ion-ios-close-outline"></span>
         </div>
         <h1 class="title">选择收件人</h1>
         <div class="button button-clear" ng-click="ok()">
-            <span class="icon ion-checkmark-round"></span>
+            <span class="icon ion-ios-checkmark-outline"></span>
         </div>
     </div>
     <ion-content class="has-header">
