--- a/www/templates/msg-read.html
+++ b/www/templates/msg-read.html
@@ -1,7 +1,7 @@
 <ion-view view-title="读消息">
 <ion-content>
 <div class="card">
-    <div class="item">
+    <div class="item grey-line">
         <div class="row force-no-padding">
             <div class="col avatar-frame-small force-no-padding">
                 <div class="row force-no-padding">
@@ -17,7 +17,7 @@
                         </div>
                     </div>
                     <div class="force-no-padding-left15" style="tex-align:right">
-                        <button class="button button-outline icon-left" ng-click="reply({{mId}})"><i class="icon ion-reply"></i>回复</button>
+                        <button class="button btn-reply icon-left" ng-click="reply({{mId}})"><i class="icon ion-ios-undo-outline"></i>回复</button>
                     </div>
                 </div>
             </div>
