--- a/www/templates/course.html
+++ b/www/templates/course.html
@@ -23,7 +23,7 @@
     <div class="item item-icon-left" ng-click="scanobj.scan()" menu-close><i class="icon ion-qr-scanner"></i>扫描</div>
     <div class="item item-icon-left" ng-if="identity.iamlecturer==1"  ng-click="toggleAttend()" menu-close><i class="icon icon-qrcode"></i>考勤开关</div>
     <div class="item item-icon-left" ng-if="identity.iamlecturer==1" ng-click="uploadToPC()" menu-close><i class="icon ion-ios-upload-outline"></i>上传到PC</div>
-    <div class="item item-icon-left" ng-if="identity.iamlecturer==1" ng-click="uploadToServer('server')" menu-close><i class="icon ion-ios-upload"></i>上传课件到SERVER</div>
+    <div class="item item-icon-left" ng-if="identity.iamlecturer==1" ng-click="uploadToServer('server')" menu-close><i class="icon ion-ios-upload"></i>上传课件到服务器</div>
     <div class="item item-icon-left" ng-click="chat()" menu-close><i class="icon ion-chatbubbles"></i>聊天室</div>
     <div class="item item-icon-left" ng-if="identity.iamlecturer==1" ng-click="gameover()" menu-close><i class="icon ion-power"></i>关机下课</div>
 </div>
