--- a/www/templates/info.html
+++ b/www/templates/info.html
@@ -1,8 +1,42 @@
 <ion-view view-title="资讯">
 <ion-content>
-<ion-list>
-<ion-item>
-</ion-item>
-</ion-list>
+<a class="item color-line" href="#/main/info/1">
+    <div class="row force-no-padding">
+        <div class="col avatar-frame-small force-no-padding">
+            <div class="row force-no-padding">
+                <div class="class-name-3">
+                   校
+                </div>          
+                <div class="col force-no-padding-left15">
+                    <div class="row force-no-padding">
+                        <h2 class="ng-binding">校车时刻表</h2>
+                    </div>
+                    <div class="row force-no-padding-top5">
+                        <p class="ng-binding">2015-12-15</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</a>
+<a class="item color-line" href="#/main/info/2">
+    <div class="row force-no-padding">
+        <div class="col avatar-frame-small force-no-padding">
+            <div class="row force-no-padding">
+                <div class="class-name-4">
+                   办
+                </div>          
+                <div class="col force-no-padding-left15">
+                    <div class="row force-no-padding">
+                        <h2 class="ng-binding">办公室电话</h2>
+                    </div>
+                    <div class="row force-no-padding-top5">
+                        <p class="ng-binding">2015-12-14</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</a>
 </ion-content>
 </ion-view>
