--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -5140,8 +5140,7 @@ code,
 kbd,
 pre,
 samp {
-  font-size: 1em;
-  font-family: monospace, serif; }
+  font-size: 0.9em; }
 
 /**
  * Improve readability of pre-formatted text in all browsers.
@@ -5925,12 +5924,10 @@ a.subdued {
     .bar.bar-light.bar-footer {
       background-image: linear-gradient(180deg, #ddd, #ddd 50%, transparent 50%); }
   .bar.bar-stable {
-    border-color: #b2b2b2;
-    background-color: #f8f8f8;
-    background-image: linear-gradient(0deg, #b2b2b2, #b2b2b2 50%, transparent 50%);
-    color: #444; }
+    background-color: #2d85d0;
+    color: #fff !important; }
     .bar.bar-stable .title {
-      color: #444; }
+      color: #fff; }
     .bar.bar-stable.bar-footer {
       background-image: linear-gradient(180deg, #b2b2b2, #b2b2b2 50%, transparent 50%); }
   .bar.bar-positive {
@@ -8533,7 +8530,7 @@ button.item.item-button-right {
   .list-inset .item.item-input input,
   .padding > .list .item.item-input input,
   .padding-horizontal > .list .item.item-input input {
-    padding-right: 44px; }
+    }
 
 .padding-left > .list .item {
   margin-left: 0; }
@@ -8972,10 +8969,9 @@ textarea {
   -webkit-align-items: center;
   -moz-align-items: center;
   align-items: center;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  padding-right: 8px;
-  padding-left: 8px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  padding: 3px 8px;
   background: #eee; }
 
 .item-input-inset .item-input-wrapper input {
@@ -10358,7 +10354,8 @@ a.button {
   display: -ms-flexbox;
   display: flex;
   padding: 5px;
-  width: 100%; }
+  width: 100%;
+  overflow: hidden; }
 
 .row-wrap {
   -webkit-flex-wrap: wrap;
