--- a/www/css/style.css
+++ b/www/css/style.css
@@ -137,16 +137,15 @@ img.profile-pic {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  position: absolute;
   bottom: 10px;
 }
 
 img.profile-pic.left {
-  left: 10px;
+  float: left;
 }
 
 img.profile-pic.right {
-  right: 10px;
+  float: right;
 }
 
 .ion-email {
@@ -160,8 +159,8 @@ img.profile-pic.right {
 }
 
 .message-detail {
-  white-space: nowrap;
-  font-size: 14px;
+  text-align:center;
+  font-size: 0.9em;
 }
 
 .bar.item-input-inset .item-input-wrapper input {
@@ -170,6 +169,7 @@ img.profile-pic.right {
 
 .message-wrapper {
   position: relative;
+  padding: 8px;
 }
 
 .message-wrapper:last-child {
@@ -177,11 +177,11 @@ img.profile-pic.right {
 }
 
 .chat-bubble {
-  border-radius: 5px;
+  border-radius: 2px;
   display: inline-block;
   padding: 10px 18px;
   position: relative;
-  margin: 10px;
+  margin: 8px;
   max-width: 80%;
 }
 
@@ -195,28 +195,34 @@ img.profile-pic.right {
 }
 
 .chat-bubble.left {
-  background-color: #e6e5eb;
+  background-color: #ffffff;
   float: left;
-  margin-left: 55px;
+}
+
+.chat-bubble.left img {
+  float: left;
 }
 
 .chat-bubble.left:before {
-  background-color: #e6e5eb;
+  background-color: #ffffff;
   left: 10px;
   -webkit-transform: rotate(70deg) skew(5deg);
 }
 
 .chat-bubble.right {
-  background-color: #158ffe;
+  background-color: #1bcd5b;
   color: #fff;
   float: right;
-  margin-right: 55px;
 }
 
 .chat-bubble.right:before {
-  background-color: #158ffe;
+  background-color: #1bcd5b;
   right: 10px;
   -webkit-transform: rotate(118deg) skew(-5deg);
+}
+
+.chat-bubble.right img {
+  float: right;
 }
 
 .chat-bubble.right a.autolinker {
@@ -551,4 +557,26 @@ padding: 40px 0;
   width: 100%;
   height: 100%;
   
+}
+
+.chat-name {
+  font-size: 0.8em;
+  color: #656565;
+  max-width: 50px;
+    line-height: 1.2em;
+}
+
+.right {
+  float: right;
+}
+
+.left {
+  float: left;
+}
+
+.clear {
+  clear: both;
+}
+
+.msg-container {
 }
