minor fix & test confirm

--- a/www/templates/course-content.html
+++ b/www/templates/course-content.html
@@ -30,6 +30,9 @@
     <i class="icon ion-ios-camera-outline"></i>
     图片开关
 </div>
+<div class="item" ng-click="showConfirm()">
+    测试
+</div>
 <div class="item item-icon-left" ng-click="watchslide()">
     <i class="icon ion-ios-compose-outline"></i>
     上课
