--- a/www/templates/entry-intro.html
+++ b/www/templates/entry-intro.html
@@ -2,17 +2,17 @@
 <ion-slide-box on-slide-changed="slideChanged(index)">
 <ion-slide class="intro-1">
 <div class="intro-img">
-	<img src="../img/intro-1.png">
+	<img src="img/intro-1.png">
 </div>
 </ion-slide>
 <ion-slide class="intro-2">
 <div class="intro-img">
-	<img src="../img/intro-2.png">
+	<img src="img/intro-2.png">
 </div>
 </ion-slide>
 <ion-slide class="intro-3">
 <div class="intro-img">
-	<img src="../img/intro-3.png">
+	<img src="img/intro-3.png">
 </div>
 <div class="enter-div">
 <button ng-click="done()" class="enter-button">立即进入</button>
