--- a/www/templates/course.html
+++ b/www/templates/course.html
@@ -23,7 +23,7 @@
     <div class="item item-icon-left" ng-click="scanobj.scan()" menu-close><i class="icon ion-ios-barcode-outline"></i>扫描</div>
     <div class="item item-icon-left bg-grey" ng-if="identity.iamlecturer==1"  ng-click="toggleAttend()" menu-close><i class="icon ion-ios-alarm-outline"></i>考勤开关</div>
     <div class="item item-icon-left bg-grey" ng-if="identity.iamlecturer==1"  ng-click="statistics()" menu-close><i class="icon ion-stats-bars"></i>考勤统计</div>
-    <div class="item item-icon-left" ng-if="identity.iamlecturer==1" ng-click="uploadToPC()" menu-close><i class="icon ion-ios-upload-outline"></i>上传到PC</div>
+    <div class="item item-icon-left" ng-click="uploadToPC()" menu-close><i class="icon ion-ios-upload-outline"></i>上传到PC</div>
     <div class="item item-icon-left bg-grey" ng-if="identity.iamlecturer==1" ng-click="uploadToServer('server')" menu-close><i class="icon ion-ios-cloud-upload-outline"></i>上传课件到服务器</div>
     <div class="item item-icon-left" ng-click="chat()" menu-close><i class="icon ion-ios-chatboxes-outline"></i>课堂讨论</div>
     <div class="item item-icon-left bg-grey" ng-if="identity.iamlecturer==1" ng-click="gameover()" menu-close><i class="icon ion-ios-reload"></i>关机下课</div>
